testsuite/tests/rename/should_fail/rnfail023.stderr

rnfail023.hs:7:1: error: [GHC-44432]
    The type signature for ‘f’ lacks an accompanying binding

rnfail023.hs:8:12: error: [GHC-44432]
    The INLINE pragma for ‘f’ lacks an accompanying binding

rnfail023.hs:14:7: error: [GHC-44432]
    The type signature for ‘g’ lacks an accompanying binding
